--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ body {
 }
 
 .entete__menu {
-  flex: 0 1 1500px;
+  flex: 0 1 100%;
   position: relative;
 }
 
@@ -449,21 +449,21 @@ footer ul li {
 .menu-principal-container {
   display: flex;
   justify-content: center;
-  border: 1px solid #aaa;
   position: absolute;
   top: 0;
-  left: center;
   z-index: 2;
   width: 400px;
   height: 400px;
-  background-color: lightblue;
+  background-color: var(--couleur-bouton-linear-gradient-2);
   transform: translateX(-200%);
-  transition: transform 0.3s ease; /* Add transition property for smooth animation */
+  transition: transform 0.3s ease;
 }
 @media screen and (min-width: 700px) {
   .menu-principal-container {
     position: static;
     width: 100%;
+    height: auto;
+    transform: translateX(0%);
   }
 }
 
@@ -477,13 +477,19 @@ footer ul li {
 @media screen and (min-width: 700px) {
   #menu-principal {
     flex-direction: row;
-    justify-content: space-around;
     flex-wrap: wrap;
+    justify-content: space-evenly;
   }
 }
 
+#menu-principal li {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+}
+
 .menu-item a {
-  color: blue;
+  color: var(--couleur-lien);
 }
 
 #chk_burger {
