--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -17,8 +17,7 @@ body {
   }
   
   .entete__menu{
-    flex : 0 1 1500px;
-    // padding: 3rem 0 0 0 ;
+    flex : 0 1 100%;
     position : relative;
   }
 
