S6C2: Ajout d'un dossier qui s'appelle category.php et on a fait quelques modifications dans le fichier de front-page et des cartes

--- a/sass/composant/_carte.scss
+++ b/sass/composant/_carte.scss
@@ -1,8 +1,8 @@
-.section__cours {
-    display: flex;
-    flex-wrap: wrap;
-    gap : 1rem;
-}
+// .section__cours {
+//     display: flex;
+//     flex-wrap: wrap;
+//     gap : 1rem;
+// }
 
 .carte {
     padding : 1rem;
