--- a/sass/composant/_menu.scss
+++ b/sass/composant/_menu.scss
@@ -11,6 +11,7 @@
 </nav>
 */
 .menu-principal-container {
+  border: 2px solid red;
   display: flex;
   justify-content: center;
   position: absolute;
@@ -30,16 +31,16 @@
 }
 
 #menu-principal {
+  border: 2px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  list-style-type: none;
+  width: 100%;
 
   @media screen and (min-width: 700px) {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 }
 
