--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -3,6 +3,13 @@
     color: var(--couleur-footer);
     padding: 20px 0;
 }
+  
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .footer__section {
     display: flex;
