--- a/sass/base/_bouton.scss
+++ b/sass/base/_bouton.scss
@@ -2,21 +2,20 @@ button.entete__button {
     background-image: linear-gradient(150deg, var(--couleur-bouton-linear-gradient-1), var(--couleur-bouton-linear-gradient-2));
     font-size: clamp(1.5rem, 0.1458rem + 4.3333vw, 3.125rem);
     border-radius: 10px;
-    border : 2ps solid   #555;
     padding : 16px 24px;
     margin: 20px;
-    transition : transform .1s;
-    transform: translateY(0);
-    font-weight: 600;
+    transition : transform .3s;
+    transform: scale(1);
+    font-weight: bold;
     text-align : center;
     cursor: pointer;
     &:hover{
       background-image: linear-gradient(150deg, var(--couleur-bouton-linear-gradient-2), var(--couleur-bouton-linear-gradient-1));
       box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-      transform: translateY(-6px);
+      transform: scale(1.2);
     }
     &:active {
-     transform: translateY(0);
+     transform: scale(1);
      background-color: white;
     }
  }
