--- a/sass/composant/_menu.scss
+++ b/sass/composant/_menu.scss
@@ -1,24 +1,11 @@
-/*
-<nav class="menu-principal-container">
-  <ul id="menu-principal" class="menu"><li id="menu-item-36" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-36"><a href="http://localhost:81/4w4-2024-gr2/2020/10/07/350-5n1-communication-et-dynamique-dune-equipe-de-travail-45h/">Communication</a></li>
-  <li id="menu-item-37" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-37"><a href="http://localhost:81/4w4-2024-gr2/2020/10/07/393-5e1-methodes-de-recherche-et-preparation-au-marche-du-travail-45h/">Méthodes de recherche</a></li>
-  <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-38"><a href="http://localhost:81/4w4-2024-gr2/2020/10/07/582-1j1-animation-et-interactivite-en-jeu-75h/">Animation en jeu</a></li>
-  <li id="menu-item-39" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-39"><a href="http://localhost:81/4w4-2024-gr2/2020/10/07/description-du-cours-582-1m1-creation-video/">Création vidéo</a></li>
-  <li id="menu-item-42" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-42"><a href="#accueil">Accueil</a></li>
-  <li id="menu-item-43" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-43"><a href="#galerie">Galerie</a></li>
-  <li id="menu-item-44" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-44"><a href="#evenement">Événement</a></li>
-</ul>
-</nav>
-*/
 .menu-principal-container {
   border: 2px solid red;
   display: flex;
-  justify-content: center;
   position: absolute;
   top: 0;
   z-index: 2;
-  width: 400px;
-  height: 400px;
+  width: 80%;
+  height: 100%;
   background-color: var(--couleur-bouton-linear-gradient-2);
   transform: translateX(-200%);
   transition: transform 0.3s ease; 
@@ -34,20 +21,18 @@
   border: 2px solid black;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 100%;
 
   @media screen and (min-width: 700px) {
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
   }
 }
 
 #menu-principal li {
   display: flex;
   flex: 1;
-  justify-content: space-between;
 }
 
 .menu-item a {
@@ -63,7 +48,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
 
   @media screen and (min-width: 700px) {
     display: none;
