S7C2: J'ai ajouté les différentes catégories demandées en bas des destinations

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,24 @@
+// $--clr-bleu-pale    : hsl(220, 100%, 85%);
+// $--clr-bleu-leger  : hsl(220, 100%, 60%);
+// $--clr-bleu-moyen  : hsl(220, 100%, 30%);    
+// $--clr-bleu-fonce  : hsl(220, 100%, 15%);
+
+
+// $--clr-orange-pale: hsl(40, 100%, 85%);
+// $--clr-orange-leger  : hsl(40, 100%, 50%);
+// $--clr-orange-moyen  : hsl(40, 100%, 30%);
+// $--clr-orange-fonce  : hsl(40, 100%, 15%);
+
+// $--clr-rouge-pale: hsl(10, 100%, 85%);
+// $--clr-rouge-leger  : hsl(10, 100%, 50%);
+// $--clr-rouge-moyen  : hsl(10, 100%, 30%);
+// $--clr-rouge-fonce  : hsl(10, 100%, 15%);
+
+// $--clr-vert-pale: hsl(70, 100%, 85%);
+// $--clr-vert-leger  : hsl(70, 100%, 50%);
+// $--clr-vert-moyen  : hsl(70, 100%, 30%);
+// $--clr-vert-fonce  : hsl(70, 100%, 15%);
+
 :root{
 
     /*https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties*/
