--- a/sass/style.scss
+++ b/sass/style.scss
@@ -59,3 +59,4 @@ Ce thème a été développé dans le cadre du cours 4W4
 @import "composant/sociaux";
 @import "composant/carte";
 @import "composant/menu";
+@import "composant/categories";
