S7C2: sass Mapping de couleurs, boucle et mixin

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,10 +15,6 @@ Ce thème a été développé dans le cadre du cours 4W4
 */
 
 
-/* ///////////////////////////////////////////////////////////////// */
-/* Variables CSS                                                     */
-/* ///////////////////////////////////////////////////////////////// */
-@import "variables";
 
 /* ///////////////////////////////////////////////////////////////// */
 /* Règles de base                                                    */
@@ -43,6 +39,8 @@ Ce thème a été développé dans le cadre du cours 4W4
 /* Class utile                                                       */
 /* ///////////////////////////////////////////////////////////////// */
 @import "utile/local";
+@import "utile/couleurs";
+@import "utile/couleurs-class";
 
 
 /* ///////////////////////////////////////////////////////////////// */
