--- a/style.css
+++ b/style.css
@@ -14,220 +14,6 @@ Text Domain: theme-gr2
 Ce thème a été développé dans le cadre du cours 4W4
 */
 /* ///////////////////////////////////////////////////////////////// */
-/* Variables CSS                                                     */
-/* ///////////////////////////////////////////////////////////////// */
-.clr-primaire-100 {
-  color: hsl(220, 100%, 85%);
-}
-
-.bck-primaire-100 {
-  background-color: hsl(220, 100%, 85%);
-}
-
-.clr-primaire-200 {
-  color: hsl(220, 100%, 60%);
-}
-
-.bck-primaire-200 {
-  background-color: hsl(220, 100%, 60%);
-}
-
-.clr-primaire-300 {
-  color: hsl(220, 100%, 30%);
-}
-
-.bck-primaire-300 {
-  background-color: hsl(220, 100%, 30%);
-}
-
-.clr-primaire-400 {
-  color: hsl(220, 100%, 15%);
-}
-
-.bck-primaire-400 {
-  background-color: hsl(220, 100%, 15%);
-}
-
-.clr-secondaire-100 {
-  color: hsl(40, 100%, 85%);
-}
-
-.bck-secondaire-100 {
-  background-color: hsl(40, 100%, 85%);
-}
-
-.clr-secondaire-200 {
-  color: hsl(40, 100%, 50%);
-}
-
-.bck-secondaire-200 {
-  background-color: hsl(40, 100%, 50%);
-}
-
-.clr-secondaire-300 {
-  color: hsl(40, 100%, 30%);
-}
-
-.bck-secondaire-300 {
-  background-color: hsl(40, 100%, 30%);
-}
-
-.clr-secondaire-400 {
-  color: hsl(40, 100%, 15%);
-}
-
-.bck-secondaire-400 {
-  background-color: hsl(40, 100%, 15%);
-}
-
-.clr-ternaire-100 {
-  color: hsl(10, 100%, 85%);
-}
-
-.bck-ternaire-100 {
-  background-color: hsl(10, 100%, 85%);
-}
-
-.clr-ternaire-200 {
-  color: hsl(10, 100%, 50%);
-}
-
-.bck-ternaire-200 {
-  background-color: hsl(10, 100%, 50%);
-}
-
-.clr-ternaire-300 {
-  color: hsl(10, 100%, 30%);
-}
-
-.bck-ternaire-300 {
-  background-color: hsl(10, 100%, 30%);
-}
-
-.clr-ternaire-400 {
-  color: hsl(10, 100%, 15%);
-}
-
-.bck-ternaire-400 {
-  background-color: hsl(10, 100%, 15%);
-}
-
-.clr-vert-100 {
-  color: hsl(70, 100%, 85%);
-}
-
-.bck-vert-100 {
-  background-color: hsl(70, 100%, 85%);
-}
-
-.clr-vert-200 {
-  color: hsl(70, 100%, 50%);
-}
-
-.bck-vert-200 {
-  background-color: hsl(70, 100%, 50%);
-}
-
-.clr-vert-300 {
-  color: hsl(70, 100%, 30%);
-}
-
-.bck-vert-300 {
-  background-color: hsl(70, 100%, 30%);
-}
-
-.clr-vert-400 {
-  color: hsl(70, 100%, 15%);
-}
-
-.bck-vert-400 {
-  background-color: hsl(70, 100%, 15%);
-}
-
-.clr-agencement-primaire {
-  color: hsl(220, 100%, 85%);
-  background-image: linear-gradient(90deg, hsl(220, 100%, 15%), hsl(220, 100%, 60%));
-}
-
-.clr-agencement-secondaire {
-  color: hsl(40, 100%, 15%);
-  background-color: hsl(40, 100%, 85%);
-}
-
-.clr-agencement-ternaire {
-  color: hsl(10, 100%, 15%);
-  background-color: hsl(10, 100%, 85%);
-}
-
-.clr-agencement-vert {
-  color: hsl(70, 100%, 15%);
-  background-color: hsl(70, 100%, 85%);
-}
-
-:root {
-  /*https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties*/
-  /*
-  --couleur-arriere-entete: #ffffff;
-  --couleur-arriere-accueil: #83ffb5 ;
-  --couleur-arriere-evenement: #30a029;
-  --couleur-arriere-galerie : #1dff74;
-  --couleur-arriere-footer: #133d0e;
-  */
-  --nb-element: 5;
-  --increment-angle: calc(360/var(--nb-element));
-  --angle-initial: 174;
-  --hu1: var(--angle-initial);
-  --hu2: calc(var(--hu1) + var(--increment-angle));
-  --hu3: calc(var(--hu2) + var(--increment-angle));
-  --hu4: calc(var(--hu3) + var(--increment-angle));
-  --hu5: calc(var(--hu4) + var(--increment-angle));
-  /*Couleur arrière-plan*/
-  --s-couleur-arriere: 100%;
-  --l-couleur-arriere: 50%;
-  /* Couleur avant-plan */
-  --s-couleur: 100%;
-  --l-couleur: 80%;
-  /*
-  --couleur-arriere-entete: hsl(var(--hu1), var(--s-couleur-arriere), var(--l-couleur-arriere));
-  --couleur-arriere-accueil: hsl(var(--hu2), var(--s-couleur-arriere), var(--l-couleur-arriere));
-  --couleur-arriere-evenement: hsl(var(--hu3), var(--s-couleur-arriere), var(--l-couleur-arriere));
-  --couleur-arriere-galerie : hsl(var(--hu4), var(--s-couleur-arriere), var(--l-couleur-arriere));
-  --couleur-arriere-footer: hsl(var(--hu5),var(--s-couleur-arriere), var(--l-couleur-arriere));
-
-  --couleur-entete: hsl(var(--hu1), var(--s-couleur), var(--l-couleur));
-  --couleur-accueil: hsl(var(--hu2), var(--s-couleur), var(--l-couleur));
-  --couleur-evenement: hsl(var(--hu3), var(--s-couleur), var(--l-couleur));
-  --couleur-galerie : hsl(var(--hu4), var(--s-couleur), var(--l-couleur));
-  --couleur-footer: hsl(var(--hu5),var(--s-couleur), var(--l-couleur));
-  */
-  --hu2: calc(var(--hu1) + 10);
-  --hu3: calc(var(--hu2) + 10);
-  --hu4: calc(var(--hu3) + 10);
-  --hu5: calc(var(--hu4) + 10);
-  --couleur-arriere-entete: hsl(var(--hu1), var(--s-couleur-arriere), 60%);
-  --couleur-arriere-accueil: hsl(var(--hu2), var(--s-couleur-arriere), 65%);
-  --couleur-arriere-evenement: hsl(var(--hu2), var(--s-couleur-arriere), 70%);
-  --couleur-arriere-galerie: hsl(var(--hu4), var(--s-couleur-arriere), 75%);
-  --couleur-arriere-footer: hsl(var(--hu1), var(--s-couleur-arriere), 80%);
-  --couleur-entete: hsl(var(--hu1), var(--s-couleur-arriere), 20%);
-  --couleur-accueil: hsl(var(--hu2), var(--s-couleur-arriere), 25%);
-  --couleur-evenement: hsl(var(--hu3), var(--s-couleur-arriere), 30%);
-  --couleur-galerie: hsl(var(--hu4), var(--s-couleur-arriere), 35%);
-  --couleur-footer: hsl(var(--hu5), var(--s-couleur-arriere), 40%);
-  --couleur-lien: #fff;
-  --couleur-lien-hover: #333;
-  --couleur-lien-visited: #a600ff;
-  --couleur-lien-menu: #fff;
-  --couleur-lien-hover-menu: black;
-  --couleur-lien-actuel-menu: grey;
-  --couleur-bouton-linear-gradient-1: #31c5ff;
-  --couleur-bouton-linear-gradient-2: rgb(41, 141, 255);
-  --couleur-dedans-blockquote: #f5f5f5;
-  --couleur-reseaux-sociaux: white;
-  --couleur-arriere-vague: (var(--hu2), var(--s-couleur-arriere), 65%);
-}
-
-/* ///////////////////////////////////////////////////////////////// */
 /* Règles de base                                                    */
 /* ///////////////////////////////////////////////////////////////// */
 /*https://clamp.font-size.app/?config=eyJyb290IjoiMTYiLCJtaW5XaWR0aCI6IjUwMHB4IiwibWF4V2lkdGgiOiI5MDBweCIsIm1pbkZvbnRTaXplIjoiMTZweCIsIm1heEZvbnRTaXplIjoiNDhweCJ9*/
@@ -443,6 +229,217 @@ footer ul li {
 /* ///////////////////////////////////////////////////////////////// */
 /* Class utile                                                       */
 /* ///////////////////////////////////////////////////////////////// */
+:root {
+  /*https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties*/
+  /*
+  --couleur-arriere-entete: #ffffff;
+  --couleur-arriere-accueil: #83ffb5 ;
+  --couleur-arriere-evenement: #30a029;
+  --couleur-arriere-galerie : #1dff74;
+  --couleur-arriere-footer: #133d0e;
+  */
+  --nb-element: 5;
+  --increment-angle: calc(360/var(--nb-element));
+  --angle-initial: 174;
+  --hu1: var(--angle-initial);
+  --hu2: calc(var(--hu1) + var(--increment-angle));
+  --hu3: calc(var(--hu2) + var(--increment-angle));
+  --hu4: calc(var(--hu3) + var(--increment-angle));
+  --hu5: calc(var(--hu4) + var(--increment-angle));
+  /*Couleur arrière-plan*/
+  --s-couleur-arriere: 100%;
+  --l-couleur-arriere: 50%;
+  /* Couleur avant-plan */
+  --s-couleur: 100%;
+  --l-couleur: 80%;
+  /*
+  --couleur-arriere-entete: hsl(var(--hu1), var(--s-couleur-arriere), var(--l-couleur-arriere));
+  --couleur-arriere-accueil: hsl(var(--hu2), var(--s-couleur-arriere), var(--l-couleur-arriere));
+  --couleur-arriere-evenement: hsl(var(--hu3), var(--s-couleur-arriere), var(--l-couleur-arriere));
+  --couleur-arriere-galerie : hsl(var(--hu4), var(--s-couleur-arriere), var(--l-couleur-arriere));
+  --couleur-arriere-footer: hsl(var(--hu5),var(--s-couleur-arriere), var(--l-couleur-arriere));
+
+  --couleur-entete: hsl(var(--hu1), var(--s-couleur), var(--l-couleur));
+  --couleur-accueil: hsl(var(--hu2), var(--s-couleur), var(--l-couleur));
+  --couleur-evenement: hsl(var(--hu3), var(--s-couleur), var(--l-couleur));
+  --couleur-galerie : hsl(var(--hu4), var(--s-couleur), var(--l-couleur));
+  --couleur-footer: hsl(var(--hu5),var(--s-couleur), var(--l-couleur));
+  */
+  --hu2: calc(var(--hu1) + 10);
+  --hu3: calc(var(--hu2) + 10);
+  --hu4: calc(var(--hu3) + 10);
+  --hu5: calc(var(--hu4) + 10);
+  --couleur-arriere-entete: hsl(var(--hu1), var(--s-couleur-arriere), 60%);
+  --couleur-arriere-accueil: hsl(var(--hu2), var(--s-couleur-arriere), 65%);
+  --couleur-arriere-evenement: hsl(var(--hu2), var(--s-couleur-arriere), 70%);
+  --couleur-arriere-galerie: hsl(var(--hu4), var(--s-couleur-arriere), 75%);
+  --couleur-arriere-footer: hsl(var(--hu1), var(--s-couleur-arriere), 80%);
+  --couleur-entete: hsl(var(--hu1), var(--s-couleur-arriere), 20%);
+  --couleur-accueil: hsl(var(--hu2), var(--s-couleur-arriere), 25%);
+  --couleur-evenement: hsl(var(--hu3), var(--s-couleur-arriere), 30%);
+  --couleur-galerie: hsl(var(--hu4), var(--s-couleur-arriere), 35%);
+  --couleur-footer: hsl(var(--hu5), var(--s-couleur-arriere), 40%);
+  --couleur-lien: #fff;
+  --couleur-lien-hover: #333;
+  --couleur-lien-visited: #a600ff;
+  --couleur-lien-menu: #fff;
+  --couleur-lien-hover-menu: black;
+  --couleur-lien-actuel-menu: grey;
+  --couleur-bouton-linear-gradient-1: #31c5ff;
+  --couleur-bouton-linear-gradient-2: rgb(41, 141, 255);
+  --couleur-dedans-blockquote: #f5f5f5;
+  --couleur-reseaux-sociaux: white;
+  --couleur-arriere-vague: (var(--hu2), var(--s-couleur-arriere), 65%);
+}
+
+.clr-primaire-100 {
+  color: hsl(220, 100%, 85%);
+}
+
+.bck-primaire-100 {
+  background-color: hsl(220, 100%, 85%);
+}
+
+.clr-primaire-200 {
+  color: hsl(220, 100%, 60%);
+}
+
+.bck-primaire-200 {
+  background-color: hsl(220, 100%, 60%);
+}
+
+.clr-primaire-300 {
+  color: hsl(220, 100%, 30%);
+}
+
+.bck-primaire-300 {
+  background-color: hsl(220, 100%, 30%);
+}
+
+.clr-primaire-400 {
+  color: hsl(220, 100%, 15%);
+}
+
+.bck-primaire-400 {
+  background-color: hsl(220, 100%, 15%);
+}
+
+.clr-secondaire-100 {
+  color: hsl(40, 100%, 85%);
+}
+
+.bck-secondaire-100 {
+  background-color: hsl(40, 100%, 85%);
+}
+
+.clr-secondaire-200 {
+  color: hsl(40, 100%, 50%);
+}
+
+.bck-secondaire-200 {
+  background-color: hsl(40, 100%, 50%);
+}
+
+.clr-secondaire-300 {
+  color: hsl(40, 100%, 30%);
+}
+
+.bck-secondaire-300 {
+  background-color: hsl(40, 100%, 30%);
+}
+
+.clr-secondaire-400 {
+  color: hsl(40, 100%, 15%);
+}
+
+.bck-secondaire-400 {
+  background-color: hsl(40, 100%, 15%);
+}
+
+.clr-ternaire-100 {
+  color: hsl(10, 100%, 85%);
+}
+
+.bck-ternaire-100 {
+  background-color: hsl(10, 100%, 85%);
+}
+
+.clr-ternaire-200 {
+  color: hsl(10, 100%, 50%);
+}
+
+.bck-ternaire-200 {
+  background-color: hsl(10, 100%, 50%);
+}
+
+.clr-ternaire-300 {
+  color: hsl(10, 100%, 30%);
+}
+
+.bck-ternaire-300 {
+  background-color: hsl(10, 100%, 30%);
+}
+
+.clr-ternaire-400 {
+  color: hsl(10, 100%, 15%);
+}
+
+.bck-ternaire-400 {
+  background-color: hsl(10, 100%, 15%);
+}
+
+.clr-vert-100 {
+  color: hsl(70, 100%, 85%);
+}
+
+.bck-vert-100 {
+  background-color: hsl(70, 100%, 85%);
+}
+
+.clr-vert-200 {
+  color: hsl(70, 100%, 50%);
+}
+
+.bck-vert-200 {
+  background-color: hsl(70, 100%, 50%);
+}
+
+.clr-vert-300 {
+  color: hsl(70, 100%, 30%);
+}
+
+.bck-vert-300 {
+  background-color: hsl(70, 100%, 30%);
+}
+
+.clr-vert-400 {
+  color: hsl(70, 100%, 15%);
+}
+
+.bck-vert-400 {
+  background-color: hsl(70, 100%, 15%);
+}
+
+.clr-agencement-primaire {
+  color: hsl(220, 100%, 85%);
+  background-image: linear-gradient(90deg, hsl(220, 100%, 15%), hsl(220, 100%, 60%));
+}
+
+.clr-agencement-secondaire {
+  color: hsl(40, 100%, 15%);
+  background-color: hsl(40, 100%, 85%);
+}
+
+.clr-agencement-ternaire {
+  color: hsl(10, 100%, 15%);
+  background-color: hsl(10, 100%, 85%);
+}
+
+.clr-agencement-vert {
+  color: hsl(70, 100%, 15%);
+  background-color: hsl(70, 100%, 85%);
+}
+
 /* ///////////////////////////////////////////////////////////////// */
 /* Les différents effets de la page                                  */
 /* ///////////////////////////////////////////////////////////////// */
@@ -611,6 +608,7 @@ footer ul li {
 #menu-principal li {
   display: flex;
   flex: 1;
+  justify-content: center;
 }
 
 .menu-item a {
