--- a/sass/utile/_couleurs.scss
+++ b/sass/utile/_couleurs.scss
@@ -42,7 +42,7 @@ $defaut: (
 );
 
 $agencement-couleur :(
-    primaire: ($--clr-bleu-pale, ($--clr-bleu-fonce, $--clr-bleu-leger)),
+    primaire: ($--clr-bleu-pale, ($--clr-bleu-leger, $--clr-bleu-fonce)),
     secondaire: ($--clr-orange-fonce, $--clr-orange-pale),
     ternaire: ($--clr-rouge-fonce, $--clr-rouge-pale),
     vert: ($--clr-vert-fonce, $--clr-vert-pale)
