--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
 }
 
+h1, h2, h3 {
+  color: rgb(255, 255, 255);
+}
+
 h1 {
   font-size: clamp(2rem, 2.075rem + 4vw, 5rem);
 }
@@ -561,10 +565,10 @@ footer ul li {
   align-items: center;
   flex: 1 0 250px;
   background-color: hsl(var(--hu1), var(--s-couleur-arriere), 75%);
-  border-radius: 15px; /* Bordures arrondies légèrement plus prononcées */
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15); /* Ombre plus prononcée */
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transition sur la transformation et l'ombre */
-  overflow: hidden; /* Pour cacher les coins arrondis des enfants */
+  border-radius: 15px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  overflow: hidden;
 }
 
 .carte:hover {
@@ -656,13 +660,23 @@ footer ul li {
 }
 
 .categories {
-  padding: 3rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   flex: 1 0 250px;
   background-color: hsl(var(--hu1), var(--s-couleur-arriere), 75%);
+  border-radius: 15px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  overflow: hidden;
+  margin: 0.5rem;
+}
+
+.categories:hover {
+  transform: translateY(-5px) scale(1.02);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.25);
 }
 
 .categories a {
