--- a/sass/base/_h.scss
+++ b/sass/base/_h.scss
@@ -9,6 +9,10 @@ h1,h2,h3,h4,h5,h6{
     justify-content: center;
 }
 
+h1,h2,h3{
+    color: rgb(255, 255, 255);
+}
+
 h1 {
     font-size: clamp(2rem, 2.075rem + 4vw, 5rem);
 }
