--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,42 +1,86 @@
 #footer {
-    background-color: var(--couleur-arriere-footer);
-    padding: 20px 0;
-}
-  
-footer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
-.footer__section {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    gap: 2rem;
-}
-
-.footer__content {
+.contenu {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-direction: row;
 }
 
-.footer__column {
-    flex: 1;
-    margin: 0 10px;
+.interaction{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.primaire{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.secondaire{
+    display: flex;
+    flex-direction: column;
+}
+
+.liens {
+    margin: 0 40px;
+}
+
+.two-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.confidentialite {
     text-align: center;
 }
 
-.footer__column > ul {
-    list-style: none;
-    padding: 0;
+.logo-compagnie {
+    width: 100px;
+    height: auto;
+    margin-bottom: 10px;
 }
 
-footer ul li {
-    margin-bottom: 8px;
+ul{
+    list-style-type: none;
+}
+
+nav ul li a{
+    color: var(--couleur-lien);
+}
+
+p{
+    text-align: center;
+}
+
+/* Media query pour le mode desktop */
+@media only screen and (min-width: 768px) {
+    #footer {
+        justify-content: space-around;
+    }
+    .contenu {
+    flex-direction: row;
+    }
+
+    .interaction{
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    .primaire{
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    .secondaire{
+        flex-direction: row;
+    }
 }
