25 mars 2024: J'ai commencé à travailler sur la section de galerie. J'ai enlevé partout la vidéo que j'avais mis, car elle est inutile pour ce TP vu que c'est une vidéo de mon équipe préféré de football, donc elle ne sert à rien pour un club de voyage. J'ai ajouté des nouvelles fonctionnalités dans ma section galerie. J'ai ajouté une image, un titre et il y aura une petite description. J'ai ajouté du SCSS sur la section galerie, donc j'ai ajouté un nouveau document pour la galerie. J'ai ajouté du Javascript pour les flèches qui vont bouger les différentes images

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -33,7 +33,7 @@ Ce thème a été développé dans le cadre du cours 4W4
 /* ///////////////////////////////////////////////////////////////// */
 @import "entete";
 @import "footer";
-
+@import "galerie";  
 
 /* ///////////////////////////////////////////////////////////////// */
 /* Class utile                                                       */
