--- a/style.css
+++ b/style.css
@@ -265,6 +265,27 @@ p {
     flex-direction: row;
   }
 }
+.destinations-carousel {
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch; /* Pour la fluidité sur iOS */
+}
+
+.destination {
+  flex: 0 0 auto;
+  margin-right: 10px;
+}
+
+.controls {
+  margin-top: 10px;
+}
+
+.controls button {
+  font-size: 24px;
+  cursor: pointer;
+}
+
 /* ///////////////////////////////////////////////////////////////// */
 /* Class utile                                                       */
 /* ///////////////////////////////////////////////////////////////// */
