25 mars 2024: J'ai ajouté les photos des différentes villes que j'ai choisi. J'ai modifié un peu le footer avec l'ajout des villes.

--- a/style.css
+++ b/style.css
@@ -277,6 +277,12 @@ p {
   margin-right: 10px;
 }
 
+.destination img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+}
+
 .controls {
   margin-top: 10px;
 }
