--- a/sass/_galerie.scss
+++ b/sass/_galerie.scss
@@ -10,6 +10,13 @@
     margin-right: 10px;
 }
 
+.destination img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover; 
+}
+
+
 .controls {
     margin-top: 10px;
 }
