26 mars 2024: J'ai ajouté une section de commentaire fictif dans la zone des événements pour simuler un peu comment les gens aiment ou non le site. J'ai aussi modifié un peu la section galerie pour que les flèches apparaissent en mode desktop, mais pas en mode téléphone

--- a/sass/_galerie.scss
+++ b/sass/_galerie.scss
@@ -23,6 +23,7 @@
 
 .controls {
   margin-top: 10px;
+  display: none;
 }
 
 .controls button {
@@ -53,6 +54,12 @@
 .destination p {
   margin-top: 5px;
   font-size: 1rem;
+}
+
+@media screen and (min-width:768px) {
+  .controls{
+    display: block;
+  }
 }
 
 @media screen and (max-width: 768px) {
