--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,6 +34,7 @@ Ce thème a été développé dans le cadre du cours 4W4
 @import "entete";
 @import "footer";
 @import "galerie";  
+@import "commentaires";
 
 /* ///////////////////////////////////////////////////////////////// */
 /* Class utile                                                       */
