--- a/style.css
+++ b/style.css
@@ -289,6 +289,7 @@ p {
 
 .controls {
   margin-top: 10px;
+  display: none;
 }
 
 .controls button {
@@ -321,12 +322,148 @@ p {
   font-size: 1rem;
 }
 
+@media screen and (min-width: 768px) {
+  .controls {
+    display: block;
+  }
+}
 @media screen and (max-width: 768px) {
   .destinations-carousel {
     flex-wrap: wrap;
   }
   .destination {
     flex: 0 0 45%;
+  }
+}
+* {
+  box-sizing: border-box;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.section-commentaire > img {
+  width: 100%;
+  height: 100%;
+}
+
+.boite-de-commentaire, .liste-commentaire {
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1333333333);
+}
+
+.session-commentaire {
+  width: 100%; /* Change to full width */
+  max-width: 650px; /* Set maximum width */
+  margin: 0 auto;
+}
+
+.liste-commentaire {
+  width: 100%;
+  margin-bottom: 12px;
+}
+
+.liste-commentaire .utilisateur {
+  display: flex;
+  padding: 8px;
+  overflow: hidden;
+}
+
+.liste-commentaire .utilisateur img {
+  height: 38px;
+  width: 38px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.liste-commentaire .nom {
+  font-weight: 600;
+}
+
+.liste-commentaire .jour {
+  font-size: 12px;
+}
+
+.reponse {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  gap: 10px;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 24px;
+  color: #777;
+  gap: 5px;
+}
+
+.icon:hover {
+  color: #000;
+  cursor: pointer;
+}
+
+.publication-commentaire .commentaire {
+  padding: 0 0 15px 58px;
+}
+
+.boite-de-commentaire {
+  padding: 10px;
+  overflow: hidden;
+}
+
+.boite-de-commentaire .utilisateur {
+  display: flex;
+  width: min-content;
+}
+
+.boite-de-commentaire .image img {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+  border-radius: 50%;
+}
+
+.boite-de-commentaire textarea {
+  background: #eee;
+  width: 100%; /* Change width to full */
+  height: 152px;
+  margin: 10px 0;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.boite-de-commentaire textarea:focus {
+  outline-color: #009cff;
+}
+
+.boite-de-commentaire .commentaire-soumission {
+  float: right;
+  padding: 6px 14px;
+  border: none;
+  background: #009cff;
+  color: white;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+.boite-de-commentaire .commentaire-soumission:hover {
+  background: #027ecc;
+}
+
+/* Media Query for devices with minimum width of 768px */
+@media only screen and (min-width: 768px) {
+  .session-commentaire {
+    width: 650px;
   }
 }
 /* ///////////////////////////////////////////////////////////////// */
